working on CRUD and the user controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.security.user.name=user1
-spring.security.user.password=12345
+#spring.security.user.name=user1
+#spring.security.user.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/trioelite
+spring.datasource.username=root
+spring.datasource.password=root1234
